--- a/generators/app/templates/PluginDialog.ui
+++ b/generators/app/templates/PluginDialog.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Plugin Example</string>
+      <string><%= appname %> Example</string>
      </property>
     </widget>
    </item>
